--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,5 +17,5 @@
   html={https://ieeexplore.ieee.org/document/10023601},    
   dimensions={true},
   selected={true},   
-  preview={SLAM_rviz.mp4}
+  preview={SLAM_rviz.gif}
 }
