--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,61 @@
----
----
+@article{Thesis,    
+  title={Stock Market Regime Analysis}, 
+  journal={Bachelor's Thesis}, 
+  abstract={- Analyzed stock market regimes of the United States using 10 macroeconomic indicators, specifically focusing on the Financial Stress Index (<b>FSI</b>). <br> - Developed a classification model to identify bear and bull markets based on FSI changes. <br> - Achieved 85.96% prediction accuracy in the test set data, utilizing a <b>RandomForest</b> and <br>Deep Neural Network (DNN)</b> and implementing techniques to prevent overfitting.},
+  year={2023},
+  code={https://github.com/Gio-Choi/Stock_Regime_Analysis},      
+  selected={true},
+  preview={stock_regime.png}  
+  }
 
-
-
-@article{IEEE-IRC,
-  abbr={IEEE-IRC},
-  title={Outdoor visual SLAM and Path Planning for Mobile-Robot},
-  author={Seongil Heo and Jueun Mun and Choi Jiwoong and Jiwon Park and Eric T. Matson },
+@INPROCEEDINGS{10023601,
+  author={Heo, Seongil and Mun, Jueun and Choi, Jiwoong and Park, Jiwon and Matson, Eric T.},
+  booktitle={2022 Sixth IEEE International Conference on Robotic Computing (IRC)}, 
+  title={Outdoor visual SLAM and Path Planning for Mobile-Robot}, 
   abstract={This paper proposes a robust visual SLAM and a path planning algorithm for autonomous vehicles in the outdoor environment. The consideration of the outdoor characteristics was essential in both SLAM and path planning processes. This study can be used when it is necessary to know the exact appearance of the environment due to the impossibility of observing the environment through a satellite map, e.g., inside a forest. The visual SLAM system was developed using GPS data in consideration of the deterioration of camera recognition performance outdoors. The GPS data was inserted into every multi-thread of visual SLAM, which are Camera Tracking, Local Mapping, and Loop Closing. It enhanced the accuracy of the map and saved computational power by preventing useless calculations. In the path planning part, our method divided the path based on the stability of the roads. When determining the optimal path, the stability of the road and the driving time were considered, and the weight was assigned based on the GPS data.},
-  journal={IEEE International Conference on Robotic Computing},
   year={2022},
   month={December},
-  publisher=IEEE,
+  volume={},
+  number={},
+  pages={296-301},
   doi={10.1109/IRC55401.2022.00057},
-  url={https://ieeexplore.ieee.org/document/10023601},
   html={https://ieeexplore.ieee.org/document/10023601},    
-  dimensions={true},
-  selected={true},   
-  preview={SLAM.gif}
-}
+  selected={true},
+  preview={SLAM.gif}  
+  }
+
+
+@article{Mirae,    
+  title={Stock Investment Opinion Sentimental Analysis}, 
+  journal={Mirae Asset Big Data Hackathon}, 
+  abstract={-	Researched transformer Natural Language Processing (NLP) model. <br> - Collected text data from Youtube videos, Youtube comments, News, and Bank Reports. <br> - Fine-tuned Google's ELECTRA model using PyTorch, which is a GAN based model. <br> - Gave a presentation on behalf of our team and finally achieved 4th place out of 1,000.},
+  year={2021},
+  month={November},
+  code={https://github.com/orgs/sw-membership/repositories},      
+  selected={false},
+  preview={mirae_asset.png}  
+  }
+
+  @article{Capstone,    
+  title={Panel Regression Analysis about the influence ESG Management has on Enterprise Value}, 
+  journal={Capstone Project}, 
+  year={2021},  
+  month={June},
+  abstract={- Conducted Linear Regression Analysis to discern a postive relation between corporate value and ESG movement. <br> - Collected Financial Statement data of 898 companies from 2016 to 2020 by crawling in Python3. <br> - Utilized three Panel Data Regression methods: Pooled OLS, Fixed Effects, Random Effects in <b>STATA</b>. <br> - Compared model through F-test, Hausman test, and LM test. },
+  code={https://github.com/Gio-Choi/Capstone_Economics},      
+  selected={false},
+  preview ={Capstone.png} 
+
+  }
+
+  @article{SBA,    
+  title={Job Recommendation System based on Natural Language Processing (NLP)}, 
+  journal={Seoul Business Agency Hackathon}, 
+  year={2021},  
+  month={February},
+  abstract={- Developed a Job Recommendation System based on Natural Language Processing (NLP) and Contents-Based Filtering (CBF) method, using ‘Scikit-learn’ and ‘KoNLPy’ libraries. <br> - Collected language data through crawling by the ‘Selenium’ library and preprocessed them in Python.},
+  code={https://github.com/Gio-Choi/Job-satellite},      
+  selected={false},
+  preview ={Job_Satellite.gif} 
+  }
+
