--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{Thesis,    
   title={Stock Market Regime Analysis}, 
   journal={Bachelor's Thesis}, 
-  abstract={- Analyzed stock market regimes of the United States using 10 macroeconomic indicators, specifically focusing on the Financial Stress Index (<b>FSI</b>). <br> - Developed a classification model to identify bear and bull markets based on FSI changes. <br> - Achieved 85.96% prediction accuracy in the test set data, utilizing a <b>RandomForest</b> and <br>Deep Neural Network (DNN)</b> and implementing techniques to prevent overfitting.},
+  abstract={- Analyzed stock market regimes of the United States using 10 macroeconomic indicators, specifically focusing on the Financial Stress Index(<b>FSI</b>). <br> - Developed a classification model to identify bear and bull markets based on FSI changes. <br> - Achieved 85.96% prediction accuracy in the test set data, utilizing a <b>RandomForest</b> and <b>Deep Neural Network(DNN)</b> and implementing techniques to prevent overfitting.},
   year={2023},
   code={https://github.com/Gio-Choi/Stock_Regime_Analysis},      
   selected={true},
@@ -49,11 +49,11 @@
   }
 
   @article{SBA,    
-  title={Job Recommendation System based on Natural Language Processing (NLP)}, 
+  title={Job Recommendation System based on Natural Language Processing(NLP)}, 
   journal={Seoul Business Agency Hackathon}, 
   year={2021},  
   month={February},
-  abstract={- Developed a Job Recommendation System based on Natural Language Processing (NLP) and Contents-Based Filtering (CBF) method, using ‘Scikit-learn’ and ‘KoNLPy’ libraries. <br> - Collected language data through crawling by the ‘Selenium’ library and preprocessed them in Python.},
+  abstract={- Developed a Job Recommendation System based on Natural Language Processing(NLP) and Contents-Based Filtering(CBF) method, using ‘Scikit-learn’ and ‘KoNLPy’ libraries. <br> - Collected language data through crawling by the ‘Selenium’ library and preprocessed them in Python.},
   code={https://github.com/Gio-Choi/Job-satellite},      
   selected={false},
   preview ={Job_Satellite.gif} 
