--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,15 @@
+@article{UN_Women,    
+  title={Working: ASEAN Gender Outlook 2023: Achieving the SDGs for all and leaving no women or girl behind}, 
+  journal={UN Women, Women Count Flagship Programme on Gender Statistics}, 
+  abstract={- Conducting SDG Gender Outlook research as part of the Women Count Flagship Programme on Gender Statistics, in charge of SDG 4th, 9th, 16th goal. <br> - Analyzed the household survey data, such as DHS and MICS data, and visualized the result in R and Python. <br> - Utilized GIS data to find the association between illiteracy and the time required to reach dense areas in Cambodia, Philippines, and Myanmar.},
+  year={2023},    
+  selected={true},
+  preview={Cambodia.png},  
+  pdf={Gender Outlook draft.pdf}
+  }
+
+
+
 @article{Thesis,    
   title={Stock Market Regime Analysis}, 
   journal={Bachelor's Thesis}, 
@@ -28,11 +40,12 @@
 @article{Mirae,    
   title={Stock Investment Opinion Sentimental Analysis}, 
   journal={Mirae Asset Big Data Hackathon}, 
-  abstract={-	Researched transformer Natural Language Processing (NLP) model. <br> - Collected text data from Youtube videos, Youtube comments, News, and Bank Reports. <br> - Fine-tuned Google's ELECTRA model using PyTorch, which is a GAN based model. <br> - Gave a presentation on behalf of our team and finally achieved 4th place out of 1,000.},
+  abstract={- Collected text data from YouTube videos, YouTube comments, News, and Bank Reports by STT, OCR, and Crawling methods.  <br> - Fine-tuned Google's ELECTRA model which is a GAN-based transformer model by PyTorch. <br> - Conducted a Sentimental Analysis and made a prototype service. <br> - Gave a presentation on behalf of our team and finally achieved 4th place out of 1,000.},
   year={2021},
   month={November},
   code={https://github.com/orgs/sw-membership/repositories},      
-  selected={false},
+  selected={true},
+  pdf={Mirae_ppt.pdf},
   preview={mirae_asset.png}  
   }
 
