--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,6 +50,18 @@
   }
 
   @article{Capstone,    
+  title={Korean Financial News Sentimental Analysis}, 
+  journal={Capstone Project}, 
+  year={2021},  
+  month={December},
+  abstract={- Aimed to develop a Korean NLP model and Translated the English dataset into Korean by API. <br> - Utilized LSTM and GRU networks by PyTorch first. <br> - Conducted Transfer Learning of BERT multilingual base model for Korean and KoBERT.},
+  code={https://github.com/Gio-Choi/Financial_News_Sentiment_Analysis},      
+  selected={true},
+  preview ={BERT.png} 
+
+  }
+
+  @article{Capstone,    
   title={Panel Regression Analysis about the influence ESG Management has on Enterprise Value}, 
   journal={Capstone Project}, 
   year={2021},  
