adjust the size

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,5 @@
 @article{UN_Women,    
-  title={Working: ASEAN Gender Outlook 2023: Achieving the SDGs for all and leaving no women or girl behind}, 
+  title={(To be published) ASEAN Gender Outlook 2023: Achieving the SDGs for all and leaving no women or girl behind}, 
   journal={UN Women, Women Count Flagship Programme on Gender Statistics}, 
   abstract={- Conducting SDG Gender Outlook research as part of the Women Count Flagship Programme on Gender Statistics, in charge of SDG 4th, 9th, 16th goal. <br> - Analyzed the household survey data, such as DHS and MICS data, and visualized the result in R and Python. <br> - Utilized GIS data to find the association between illiteracy and the time required to reach dense areas in Cambodia, Philippines, and Myanmar.},
   year={2023},    
