--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,17 @@
-@article{UN_Women,    
-  title={(To be published) ASEAN Gender Outlook 2023: Achieving the SDGs for all and leaving no women or girl behind}, 
-  journal={UN Women, Women Count Flagship Programme on Gender Statistics}, 
-  abstract={- Conducting SDG Gender Outlook research as part of the Women Count Flagship Programme on Gender Statistics, in charge of SDG 4th, 9th, 16th goal. <br> - Analyzed the household survey data, such as DHS and MICS data, and visualized the result in R and Python. <br> - Utilized GIS data to find the association between illiteracy and the time required to reach dense areas in Cambodia, Philippines, and Myanmar.},
-  year={2023},    
+@article{MSCI,    
+  title={Korea discount and corporate governance}, 
+  journal={MSCI Inc.}, 
+  abstract={This paper examines the "Board and Ownership and Control" Key Issue within the MSCI ESG Ratings Corporate Governance Theme, with a focus on board independence and adherence to the one-share-one-vote (OSOV) principle. Our analysis reveals significant governance challenges among Korean companies. Notably, less than half of the directors on Korean company boards are independent, a figure significantly lower than the global average of 66%. Additionally, 82% of Korean companies were flagged for Related Party Transactions (RPT), with smaller firms exhibiting lower board independence. Furthermore, Korean companies that deviated from the OSOV principle demonstrated weaker financial performance, with both return-on-equity (ROE) and price-to-book ratio (PBR) falling below the market average. These findings underscore the need for enhanced governance practices within Korean corporations to align more closely with global standards.},
+  year={2024},    
+  selected={true},
+  preview={msci-logo.png}  
+  }
+
+@article{UN,    
+  title={ASEAN Gender Outlook 2024: Achieving the SDGs for all and leaving no women or girl behind}, 
+  journal={United Nations, Women Count Flagship Programme on Gender Statistics}, 
+  abstract={- Conducted SDG Gender Outlook research as part of the Women Count Flagship Programme on Gender Statistics, in charge of SDG 4th, 9th, 16th goal. <br> - Analyzed the household survey data, such as DHS and MICS data, and visualized the result in R and Python. <br> - Utilized GIS data to find the association between illiteracy and the time required to reach dense areas in Cambodia, Philippines, and Myanmar.},
+  year={2024},    
   selected={true},
   preview={Cambodia.png},  
   pdf={outlook.pdf}
