--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,16 +9,18 @@
   }
 
 @article{UN,    
-  title={ASEAN Gender Outlook 2024: Achieving the SDGs for all and leaving no women or girl behind}, 
-  journal={United Nations, Women Count Flagship Programme on Gender Statistics}, 
-  abstract={- Conducted SDG Gender Outlook research as part of the Women Count Flagship Programme on Gender Statistics, in charge of SDG 4th, 9th, 16th goal. <br> - Analyzed the household survey data, such as DHS and MICS data, and visualized the result in R and Python. <br> - Utilized GIS data to find the association between illiteracy and the time required to reach dense areas in Cambodia, Philippines, and Myanmar.},
+  title={ASEAN Gender Outlook 2024}, 
+  author={Duerto-Valero, Sara, et al.},
+  journal={UN General Assembly (UNGA)},
+  abstract={- Despite high primary and lower secondary education completion rates in ASEAN, only 64 percent of students complete upper secondary education, with boys, particularly in rural areas, being more likely to drop out due to economic barriers and opportunity costs. While girls tend to stay in school longer, challenges such as inadequate access to employment opportunities, poor educational infrastructure, and disparities between urban and rural areas persist, highlighting the need for increased investments in education across the region. 
+      <br> -  Adolescent birth rates in South-East Asia have decreased from 41 to 35 per 1,000 between 2015 and 2024, with factors such as delayed marriage, access to contraceptives, and education contributing to this decline. However, disparities in education infrastructure, particularly in rural areas, remain a challenge, with limited access to basic facilities like sanitation and water, which increases the likelihood of teenage pregnancy and school dropout among rural girls.
+      <br> - Despite South-East Asia being one of the world's safest regions with a homicide rate of 1.8 per 100,000 people, a growing sense of insecurity, particularly among women, has emerged due to factors like COVID-19, economic disruptions, and crime, highlighting the need for enhanced law enforcement and inclusive security approaches.
+      <br> - Over the past decade, official development assistance (ODA) for gender equality in the ASEAN region has increased significantly, with 47% of all ODA in 2022 supporting gender-focused initiatives, though investments directly targeting gender equality have declined, highlighting the need for continued and expanded funding to sustain progress in areas like women's participation, violence reduction, and the gender-environment nexus.},
   year={2024},    
   selected={true},
-  preview={Cambodia.png},  
-  pdf={outlook.pdf}
+  preview={ASEAN_thumbnail.png},  
+  pdf={ASEAN-gender-outlook_2024_edited.pdf}
   }
-
-
 
 @article{Thesis,    
   title={Stock Market Regime Analysis}, 
