--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,5 @@
 @article{MSCI,    
-  title={Korea discount and corporate governance}, 
+  title={Korea Discount and Corporate Governance}, 
   author={Kim, SK and Kim, Ye Jun and Choi, Gio (Jiwoong)},
   journal={MSCI Inc.}, 
   abstract={This paper examines the "Board and Ownership and Control" Key Issue within the MSCI ESG Ratings Corporate Governance Theme, with a focus on board independence and adherence to the one-share-one-vote (OSOV) principle. Our analysis reveals significant governance challenges among Korean companies. Notably, less than half of the directors on Korean company boards are independent, a figure significantly lower than the global average of 66%. Additionally, 82% of Korean companies were flagged for Related Party Transactions (RPT), with smaller firms exhibiting lower board independence. Furthermore, Korean companies that deviated from the OSOV principle demonstrated weaker financial performance, with both return-on-equity (ROE) and price-to-book ratio (PBR) falling below the market average. These findings underscore the need for enhanced governance practices within Korean corporations to align more closely with global standards.},
