--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,40 @@
+@article{ICSSI,
+  title        = {Automating Scholarly Judgment},
+  author       = {Choi, Jiwoong and Wu, Siyang and Mao, Yingrong and Bao, Honglin},
+  journal      = {(Under Review) International Conference on the Science of Science and Innovation (ICSSI)},
+  year         = {2025},
+  month        = {June},
+  abstract     = {<i> Keywords: Automated Hypothesis Generation, Scientific Evaluation, Large Language Models </i> <br> What constitutes good science remains a longstanding question in both philosophy and practice. Traditional peer review, for instance, has been critiqued for subjectivity, inconsistency, and potential bias. Recent advances in large language models (LLMs) offer a novel opportunity to re-examine this question at scale. Here, we analyze a dataset of approximately 27K papers submitted to 45 computer science conferences, paired on review scores to create clear distinctions in perceived quality. Rather than manually defining the criteria of “good” science, we task LLMs with iteratively proposing, testing, and refining hypotheses that explain why one paper might be judged as stronger than another. This yields a final pool of 20 orthogonal hypotheses with high coverage of pairs. Throughout this abductive reasoning process, the LLM’s initial “normative” prior beliefs (e.g., a good paper has high novelty) are updated into a posterior that reflects more professional-science criteria (e.g., a good paper tells a good story). LLMs could serve as powerful tools for uncovering latent patterns in how experts judge scientific work. Nevertheless, challenges remain. Interpretability is a critical bottleneck: while the iterative process yields human-understandable hypotheses, it relies on opaque LLM reasoning under the hood. In addition, substantial progress is still needed in guiding LLMs and humans toward a clearer understanding of what constitutes truly valuable science.},
+  selected     = {true},
+  preview      = {recursive.jpg},
+  pdf          = {Automating_Scholarly_Judgm.pdf}
+}
+
+@article{ICSSI_2,
+  title        = {Academic Simulacra: Forcasting Research Ideas through Multi-Agent LLM Simulations},
+  author       = {Mao, Yingrong and Choi, Jiwoong and Kang, Donghyun and Evans, James},
+  journal      = {(Under Review) International Conference on the Science of Science and Innovation (ICSSI)},
+  year         = {2025},
+  month        = {June},
+  abstract     = {<i> Keywords: Multi-Agent Simulation, Simulated Scholarship, Large Language Models </i> <br> This study employs multi-agent simulations powered by Large Language Models (LLMs) to predict future research ideas in computer science. Using publication data from leading conferences (e.g., ICML, ICLR, EMNLP), we simulate scholarly collaboration by creating agents modeled on real-world authors—each initialized with their previous publications. The simulation framework uses LLaMA 3.1 8B to generate research discussions, titles, and key ideas. Generated content are compared to actual 2024 papers using SPECTER2 embeddings, achieving a mean cosine similarity of 0.860. Regression analysis reveals that author ethnicity, particularly Chinese ethnicity, plays a more substantial role than institutional affiliation in shaping idea similarity. The results demonstrate the promise of LLM-based simulations for predictive modeling in the science of science.},
+  selected     = {true},
+  preview      = {workflow.png},
+  pdf          = {Academic_Simulacra.pdf}
+}
+
+@article{IC2S2,
+  title        = {Globalized Arts: International Migration and Stylistic Diversity among Artists (1400--2024)},
+  author       = {Choi, Jiwoong and Oberoi, Avi and Wang, Yangyu},
+  journal      = {(Under Review) International Conference on Computational Social Science (IC2S2)},
+  year         = {2025},
+  month        = {July},
+  abstract     = {<i> Keywords: Sociology of Art, Contrastive Learning, Large Language Model, Propensity Score </i> <br> This paper studies how international migration has influenced artistic diversity over time, showing that migrating artists tend to develop more varied styles. Applying contrastive learning upon a dataset of 171,430 paintings from over 2,752 artists, the research demonstrates the stylistic trends from 1400 to 2024 and finds that artistic diversity increased notably between 1850 and 2000, aligning with international migration patterns. By analyzing historical records and demographic factors, the study shows that global migration contributes to greater stylistic variation. A statistical approach of propensity score estimation confirms this effect. These findings support theories of cultural exchange and transnationalism, emphasizing migration’s role in shaping global art. Future research could further explore how individual artists’ styles evolve before and after migration, enriching our understanding of artistic change.},
+  selected     = {true},
+  preview      = {IC2S2.png},
+  pdf          = {IC2S2.pdf}
+}
+
+
 @article{MSCI,    
   title={Korea Discount and Corporate Governance}, 
   author={Kim, SK and Kim, Ye Jun and Choi, Gio (Jiwoong)},
@@ -22,15 +59,6 @@
   pdf={ASEAN-gender-outlook_2024_edited.pdf}
   }
 
-@article{Thesis,    
-  title={Stock Market Regime Analysis}, 
-  journal={Bachelor's Thesis}, 
-  abstract={- Analyzed stock market regimes of the United States using 10 macroeconomic indicators, specifically focusing on the Financial Stress Index(<b>FSI</b>). <br> - Developed a classification model to identify bear and bull markets based on FSI changes. <br> - Achieved 85.96% prediction accuracy in the test set data, utilizing a <b>RandomForest</b> and <b>Deep Neural Network(DNN)</b> and implementing techniques to prevent overfitting.},
-  year={2023},
-  code={https://github.com/Gio-Choi/Stock_Regime_Analysis},      
-  selected={true},
-  preview={stock_regime.png}  
-  }
 
 @INPROCEEDINGS{10023601,
   author={Heo, Seongil and Mun, Jueun and Choi, Jiwoong and Park, Jiwon and Matson, Eric T.},
@@ -62,7 +90,7 @@
   preview={mirae_asset.png}  
   }
 
-  @article{Capstone,    
+@article{Capstone,    
   title={Korean Financial News Sentimental Analysis}, 
   journal={Capstone Project}, 
   year={2021},  
@@ -74,7 +102,8 @@
 
   }
 
-  @article{Capstone,    
+
+@article{Capstone,    
   title={Panel Regression Analysis about the influence ESG Management has on Enterprise Value}, 
   journal={Capstone Project}, 
   year={2021},  
@@ -84,7 +113,7 @@
   preview ={Capstone.png} 
 
   }
-
+  
   @article{SBA,    
   title={Job Recommendation System based on Natural Language Processing(NLP)}, 
   journal={Seoul Business Agency Hackathon}, 
