--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,17 +37,17 @@
 
 @article{MSCI,    
   title={Korea Discount and Corporate Governance}, 
-  author={Kim, SK and Kim, Ye Jun and Choi, Gio (Jiwoong)},
-  journal={MSCI Inc.}, 
+  author={Kim, SK and Kim, Ye Jun and Choi, Jiwoong},
+  journal={Morgan Stanley Capital International (MSCI Inc.}, 
   abstract={This paper examines the "Board and Ownership and Control" Key Issue within the MSCI ESG Ratings Corporate Governance Theme, with a focus on board independence and adherence to the one-share-one-vote (OSOV) principle. Our analysis reveals significant governance challenges among Korean companies. Notably, less than half of the directors on Korean company boards are independent, a figure significantly lower than the global average of 66%. Additionally, 82% of Korean companies were flagged for Related Party Transactions (RPT), with smaller firms exhibiting lower board independence. Furthermore, Korean companies that deviated from the OSOV principle demonstrated weaker financial performance, with both return-on-equity (ROE) and price-to-book ratio (PBR) falling below the market average. These findings underscore the need for enhanced governance practices within Korean corporations to align more closely with global standards.},
   year={2024},    
   selected={true},
-  preview={msci_logo.png}  
+  preview={msci_logo2.png}  
   }
 
 @article{UN,    
   title={ASEAN Gender Outlook 2024}, 
-  author={Duerto-Valero, Sara and et al.},
+  author={Choi, Statistics-Jiwoong},
   journal={UN General Assembly (UNGA)},
   abstract={- Despite high primary and lower secondary education completion rates in ASEAN, only 64 percent of students complete upper secondary education, with boys, particularly in rural areas, being more likely to drop out due to economic barriers and opportunity costs. While girls tend to stay in school longer, challenges such as inadequate access to employment opportunities, poor educational infrastructure, and disparities between urban and rural areas persist, highlighting the need for increased investments in education across the region. 
       <br> -  Adolescent birth rates in South-East Asia have decreased from 41 to 35 per 1,000 between 2015 and 2024, with factors such as delayed marriage, access to contraceptives, and education contributing to this decline. However, disparities in education infrastructure, particularly in rural areas, remain a challenge, with limited access to basic facilities like sanitation and water, which increases the likelihood of teenage pregnancy and school dropout among rural girls.
@@ -85,7 +85,7 @@
   year={2021},
   month={November},
   code={https://github.com/orgs/sw-membership/repositories},      
-  selected={true},
+  selected={false},
   pdf={Mirae_ppt.pdf},
   preview={mirae_asset.png}  
   }
@@ -97,7 +97,7 @@
   month={December},
   abstract={- Aimed to develop a Korean NLP model and Translated the English dataset into Korean by API. <br> - Utilized LSTM and GRU networks by PyTorch first. <br> - Conducted Transfer Learning of BERT multilingual base model for Korean and KoBERT.},
   code={https://github.com/Gio-Choi/Financial_News_Sentiment_Analysis},      
-  selected={true},
+  selected={false},
   preview ={BERT.png} 
 
   }
