--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,16 +10,16 @@
   pdf          = {Automating_Scholarly_Judgm.pdf}
 }
 
-@article{ICSSI_2,
+@article{ACM_CI,
   title        = {Academic Simulacra: Forcasting Research Ideas through Multi-Agent LLM Simulations},
-  author       = {Mao, Yingrong and Choi, Jiwoong and Kang, Donghyun and Evans, James},
-  journal      = {(Under Review) International Conference on the Science of Science and Innovation (ICSSI)},
+  author       = {Choi, Jiwoong and  and Kang, Donghyun and Mao, Yingrong and Evans, James},
+  journal      = {(Under Review) ACM Collective Intelligence (CI); Extended Abstract},
   year         = {2025},
-  month        = {June},
-  abstract     = {<i> Keywords: Multi-Agent Simulation, Simulated Scholarship, Large Language Models </i> <br> This study employs multi-agent simulations powered by Large Language Models (LLMs) to predict future research ideas in computer science. Using publication data from leading conferences (e.g., ICML, ICLR, EMNLP), we simulate scholarly collaboration by creating agents modeled on real-world authors—each initialized with their previous publications. The simulation framework uses LLaMA 3.1 8B to generate research discussions, titles, and key ideas. Generated content are compared to actual 2024 papers using SPECTER2 embeddings, achieving a mean cosine similarity of 0.860. Regression analysis reveals that author ethnicity, particularly Chinese ethnicity, plays a more substantial role than institutional affiliation in shaping idea similarity. The results demonstrate the promise of LLM-based simulations for predictive modeling in the science of science.},
+  month        = {August},
+  abstract     = {<i> Keywords: Multi-Agent Simulation, Simulated Scholarship, Large Language Models </i> <br> We introduce a multi-agent simulation framework for forecasting research ideas using "scholar agents" powered by large language models (LLMs). We instantiate approximately 2,686 scholar agents based on their publication histories prior to 2024 and simulate discussions to collectively generate key research ideas for 1,400 papers targeting seven major computer science conferences in 2024. We then evaluate the proximity of these generated ideas by comparing their semantic embeddings with those of the actual target papers written by the corresponding researchers. Our results suggest that LLM-based multi-agent simulations yield substantially higher similarity scores with real publications than two baselines: (1) the average pairwise similarity among papers within the same 2024 conference, and (2) a random set of past papers from the same conference. This demonstrates the predictive capacity of our scholar agent framework. We then further analyze how diversity in ethnic composition and institutional affiliations may correlate with the predictability of research, or inversely, the degree of surprise relative to the past. Our preliminary analysis suggests that the least predictable and thus most surprising research ideas emerge from teams affiliated with Chinese institutions but not composed of ethnically Chinese authors. These findings offer promising initial evidence that simulating knowledge-driven scholar agents can anticipate directions of scientific discovery and help explain the influence of social and institutional factors on innovation.},
   selected     = {true},
-  preview      = {workflow.png},
-  pdf          = {Academic_Simulacra.pdf}
+  preview      = {ACM_CI_preview.png},
+  pdf          = {ACM_CI.pdf}
 }
 
 @article{IC2S2,
