--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{ACM_CI,
   title        = {Academic Simulacra: Forcasting Research Ideas through Multi-Agent LLM Simulations},
   author       = {Choi, Jiwoong and  and Kang, Donghyun and Mao, Yingrong and Evans, James},
-  journal      = {(Poster Presentation) ACM Collective Intelligence (CI); Extended Abstract},
+  journal      = {(Poster Presentation) ACM Collective Intelligence; Extended Abstract},
   year         = {2025},
   month        = {August},
   abstract     = {<i> Keywords: Multi-Agent Simulation, Simulated Scholarship, Large Language Models </i> <br> We introduce a multi-agent simulation framework for forecasting research ideas using "scholar agents" powered by large language models (LLMs). We instantiate approximately 2,686 scholar agents based on their publication histories prior to 2024 and simulate discussions to collectively generate key research ideas for 1,400 papers targeting seven major computer science conferences in 2024. We then evaluate the proximity of these generated ideas by comparing their semantic embeddings with those of the actual target papers written by the corresponding researchers. Our results suggest that LLM-based multi-agent simulations yield substantially higher similarity scores with real publications than two baselines: (1) the average pairwise similarity among papers within the same 2024 conference, and (2) a random set of past papers from the same conference. This demonstrates the predictive capacity of our scholar agent framework. We then further analyze how diversity in ethnic composition and institutional affiliations may correlate with the predictability of research, or inversely, the degree of surprise relative to the past. Our preliminary analysis suggests that the least predictable and thus most surprising research ideas emerge from teams affiliated with Chinese institutions but not composed of ethnically Chinese authors. These findings offer promising initial evidence that simulating knowledge-driven scholar agents can anticipate directions of scientific discovery and help explain the influence of social and institutional factors on innovation.},
@@ -49,7 +49,7 @@
 
 @INPROCEEDINGS{10023601,
   author={Heo, Seongil and Mun, Jueun and Choi, Jiwoong and Park, Jiwon and Matson, Eric T.},
-  booktitle={2022 Sixth IEEE International Conference on Robotic Computing (IRC)}, 
+  booktitle={IEEE International Conference on Robotic Computing (IRC)}, 
   title={Outdoor visual SLAM and Path Planning for Mobile-Robot}, 
   abstract={This paper proposes a robust visual SLAM and a path planning algorithm for autonomous vehicles in the outdoor environment. The consideration of the outdoor characteristics was essential in both SLAM and path planning processes. This study can be used when it is necessary to know the exact appearance of the environment due to the impossibility of observing the environment through a satellite map, e.g., inside a forest. The visual SLAM system was developed using GPS data in consideration of the deterioration of camera recognition performance outdoors. The GPS data was inserted into every multi-thread of visual SLAM, which are Camera Tracking, Local Mapping, and Loop Closing. It enhanced the accuracy of the map and saved computational power by preventing useless calculations. In the path planning part, our method divided the path based on the stability of the roads. When determining the optimal path, the stability of the road and the driving time were considered, and the weight was assigned based on the GPS data.},
   year={2022},
