book_to_journal

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,7 +49,7 @@
 
 @INPROCEEDINGS{10023601,
   author={Heo, Seongil and Mun, Jueun and Choi, Jiwoong and Park, Jiwon and Matson, Eric T.},
-  booktitle={IEEE International Conference on Robotic Computing (IRC)}, 
+  journal={IEEE International Conference on Robotic Computing (IRC)}, 
   title={Outdoor visual SLAM and Path Planning for Mobile-Robot}, 
   abstract={This paper proposes a robust visual SLAM and a path planning algorithm for autonomous vehicles in the outdoor environment. The consideration of the outdoor characteristics was essential in both SLAM and path planning processes. This study can be used when it is necessary to know the exact appearance of the environment due to the impossibility of observing the environment through a satellite map, e.g., inside a forest. The visual SLAM system was developed using GPS data in consideration of the deterioration of camera recognition performance outdoors. The GPS data was inserted into every multi-thread of visual SLAM, which are Camera Tracking, Local Mapping, and Loop Closing. It enhanced the accuracy of the map and saved computational power by preventing useless calculations. In the path planning part, our method divided the path based on the stability of the roads. When determining the optimal path, the stability of the road and the driving time were considered, and the weight was assigned based on the GPS data.},
   year={2022},
