--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,15 @@
+@article{bao2025languagemodelssurfaceunwritten,
+      title={Language Models Surface the Unwritten Code of Science and Society}, 
+      author={Bao, Honglin and Wu, Siyang<sup>*</sup> and Choi, Jiwoong<sup>*</sup> and Mao, Yingrong<sup>*</sup> and Evans, James A.},
+      year={2025},
+      month= {December},
+      journal={(Under Review) NeurIPS 2025}, 
+      abstract={This paper calls on the research community not only to investigate how human biases are inherited by large language models (LLMs) but also to explore how these biases in LLMs can be leveraged to make society's "unwritten code" - such as implicit stereotypes and heuristics - visible and accessible for critique. We introduce a conceptual framework through a case study in science: uncovering hidden rules in peer review - the factors that reviewers care about but rarely state explicitly due to normative scientific expectations. The idea of the framework is to push LLMs to speak out their heuristics through generating self-consistent hypotheses - why one paper appeared stronger in reviewer scoring - among paired papers submitted to 45 computer science conferences, while iteratively searching deeper hypotheses from remaining pairs where existing hypotheses cannot explain. We observed that LLMs' normative priors about the internal characteristics of good science extracted from their self-talk, e.g. theoretical rigor, were systematically updated toward posteriors that emphasize storytelling about external connections, such as how the work is positioned and connected within and across literatures. This shift reveals the primacy of scientific myths about intrinsic properties driving scientific excellence rather than extrinsic contextualization and storytelling that influence conceptions of relevance and significance. Human reviewers tend to explicitly reward aspects that moderately align with LLMs' normative priors (correlation = 0.49) but avoid articulating contextualization and storytelling posteriors in their review comments (correlation = -0.14), despite giving implicit reward to them with positive scores. We discuss the broad applicability of the framework, leveraging LLMs as diagnostic tools to surface the tacit codes underlying human society, enabling more precisely targeted responsible AI.},
+      html={https://arxiv.org/abs/2505.18942},    
+      selected={true},
+      preview={white.png}
+}
+
 @article{ACM_CI,
   title        = {Academic Simulacra: Forcasting Research Ideas through Multi-Agent LLM Simulations},
   author       = {Choi, Jiwoong and  and Kang, Donghyun and Mao, Yingrong and Evans, James},
@@ -76,7 +88,6 @@
   pdf={Mirae_ppt.pdf},
   preview={mirae_asset.png}  
   }
-
 
   
   
