--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @article{bao2025languagemodelssurfaceunwritten,
       title={Language Models Surface the Unwritten Code of Science and Society}, 
-      author={Bao, Honglin and Wu, Siyang<sup>*</sup> and Choi, Jiwoong<sup>*</sup> and Mao, Yingrong<sup>*</sup> and Evans, James A.},
+      author={Bao, Honglin and Wu<sup>*</sup>, Siyang and Choi<sup>*</sup>, Jiwoong and Mao<sup>*</sup>, Yingrong and Evans, James A.},
       year={2025},
       month= {December},
       journal={(Under Review) NeurIPS 2025}, 
@@ -27,7 +27,7 @@
   author       = {Choi, Jiwoong and Wu, Siyang and Mao, Yingrong and Bao, Honglin},
   journal      = {(Oral Presentation) International Conference on the Science of Science and Innovation (ICSSI)},
   year         = {2025},
-  month        = {June},
+  month        = {September},
   abstract     = {<i> Keywords: Automated Hypothesis Generation, Scientific Evaluation, Large Language Models </i> <br> What constitutes good science remains a longstanding question in both philosophy and practice. Traditional peer review, for instance, has been critiqued for subjectivity, inconsistency, and potential bias. Recent advances in large language models (LLMs) offer a novel opportunity to re-examine this question at scale. Here, we analyze a dataset of approximately 27K papers submitted to 45 computer science conferences, paired on review scores to create clear distinctions in perceived quality. Rather than manually defining the criteria of “good” science, we task LLMs with iteratively proposing, testing, and refining hypotheses that explain why one paper might be judged as stronger than another. This yields a final pool of 20 orthogonal hypotheses with high coverage of pairs. Throughout this abductive reasoning process, the LLM’s initial “normative” prior beliefs (e.g., a good paper has high novelty) are updated into a posterior that reflects more professional-science criteria (e.g., a good paper tells a good story). LLMs could serve as powerful tools for uncovering latent patterns in how experts judge scientific work. Nevertheless, challenges remain. Interpretability is a critical bottleneck: while the iterative process yields human-understandable hypotheses, it relies on opaque LLM reasoning under the hood. In addition, substantial progress is still needed in guiding LLMs and humans toward a clearer understanding of what constitutes truly valuable science.},
   selected     = {true},
   preview      = {recursive.jpg},
