--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,21 @@
+@article{choi2025clinicaltrialscitationbias,
+    title={What Would Clinical Trials Cite — and What Should They Cite? Citation Bias and the p-value Heap in Clinical Research},
+    author={Choi, Jiwoong},
+    year={2025},
+    journal={Working Paper (MA Thesis)},
+    abstract={Citations in clinical trial registrations do more than acknowledge prior work; they define the evidentiary context in which regulators and clinicians interpret results. I use this role to construct a trial-level \emph{Citation Bias Index} (CBI) that measures how far a trial's background citations at registration depart from the set of studies it ought to cite given pre-results information. Using 547,866 interventional trials on ClinicalTrials.gov linked to 39 million PubMed papers, I apply language model embeddings to identify content-relevant prior trials and systematic reviews (a “should-cite” set) and a matrix factorization model of the trial–paper citation network to estimate citation probabilities over candidate prior papers for the focal trial (a “would-cite” distribution). CBI is the symmetric Kullback–Leibler divergence between these distributions. Citation bias is lowest for trials that later report highly significant results ($p \le 0.01$) and spikes sharply for borderline findings just below $p = 0.05$, creating a pronounced $p$-value heap. In regressions with registration-year and condition fixed effects, higher CBI predicts a significantly greater probability that the trial's outcome falls in the narrow borderline band ($0.045 < p \le 0.05$).},
+    selected={true},
+    preview={would_cite_should_cite.png}
+}
+@article{choi2025bready4ai,
+    title   = {BReady4AI: A Global AI Innovation Index},
+    year    = {2025},
+    journal = {Working Project, World Bank},
+    abstract = {We construct an annual, country-level AI innovation index organized around three pillars: Production of AI, Consumption of AI, and Participation in AI. Using indicators built from publications, patents, grants, collaboration networks, and demographic diversity, we score and rank countries on their capacity for frontier AI innovation.},
+    selected = {true},
+    preview  = {ES_2024.png}
+}
+
 @article{bao2025languagemodelssurfaceunwritten,
       title={Language Models Surface the Unwritten Code of Science and Society}, 
       author={Bao, Honglin and Wu<sup>*</sup>, Siyang and Choi<sup>*</sup>, Jiwoong and Mao<sup>*</sup>, Yingrong and Evans, James A.},
@@ -12,8 +30,8 @@
 
 @article{ACM_CI,
   title        = {Academic Simulacra: Forcasting Research Ideas through Multi-Agent LLM Simulations},
-  author       = {Choi, Jiwoong and  and Kang, Donghyun and Mao, Yingrong and Evans, James},
-  journal      = {(Poster Presentation) ACM Collective Intelligence; Extended Abstract},
+  author       = {Choi, Jiwoong and Mao, Yingrong and Kang, Donghyun and  and Evans, James},
+  journal      = {Poster Presentation at ACM Collective Intelligence 2025; Submitted to The Web Conference (WWW 2026)},
   year         = {2025},
   month        = {August},
   abstract     = {<i> Keywords: Multi-Agent Simulation, Simulated Scholarship, Large Language Models </i> <br> We introduce a multi-agent simulation framework for forecasting research ideas using "scholar agents" powered by large language models (LLMs). We instantiate approximately 2,686 scholar agents based on their publication histories prior to 2024 and simulate discussions to collectively generate key research ideas for 1,400 papers targeting seven major computer science conferences in 2024. We then evaluate the proximity of these generated ideas by comparing their semantic embeddings with those of the actual target papers written by the corresponding researchers. Our results suggest that LLM-based multi-agent simulations yield substantially higher similarity scores with real publications than two baselines: (1) the average pairwise similarity among papers within the same 2024 conference, and (2) a random set of past papers from the same conference. This demonstrates the predictive capacity of our scholar agent framework. We then further analyze how diversity in ethnic composition and institutional affiliations may correlate with the predictability of research, or inversely, the degree of surprise relative to the past. Our preliminary analysis suggests that the least predictable and thus most surprising research ideas emerge from teams affiliated with Chinese institutions but not composed of ethnically Chinese authors. These findings offer promising initial evidence that simulating knowledge-driven scholar agents can anticipate directions of scientific discovery and help explain the influence of social and institutional factors on innovation.},
