--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,8 +2,8 @@
     title={What Would Clinical Trials Cite — and What Should They Cite? Citation Bias and the p-value Heap in Clinical Research},
     author={Choi, Jiwoong},
     year={2025},
-    journal={Working Paper (MA Thesis)},
-    abstract={Citations in clinical trial registrations do more than acknowledge prior work; they define the evidentiary context in which regulators and clinicians interpret results. I use this role to construct a trial-level \emph{Citation Bias Index} (CBI) that measures how far a trial's background citations at registration depart from the set of studies it ought to cite given pre-results information. Using 547,866 interventional trials on ClinicalTrials.gov linked to 39 million PubMed papers, I apply language model embeddings to identify content-relevant prior trials and systematic reviews (a “should-cite” set) and a matrix factorization model of the trial–paper citation network to estimate citation probabilities over candidate prior papers for the focal trial (a “would-cite” distribution). CBI is the symmetric Kullback–Leibler divergence between these distributions. Citation bias is lowest for trials that later report highly significant results ($p \le 0.01$) and spikes sharply for borderline findings just below $p = 0.05$, creating a pronounced $p$-value heap. In regressions with registration-year and condition fixed effects, higher CBI predicts a significantly greater probability that the trial's outcome falls in the narrow borderline band ($0.045 < p \le 0.05$).},
+    journal={Working Paper (MA Thesis), Manuscript Ready},
+    abstract={Citations in clinical trial registrations do more than acknowledge prior work; they define the evidentiary context in which regulators and clinicians interpret results. I use this role to construct a trial-level \emph{Citation Bias Index} (CBI) that measures how far a trial's background citations at registration depart from the set of studies it ought to cite given pre-results information. Using 547,866 interventional trials on ClinicalTrials.gov linked to 39 million PubMed papers, I apply language model embeddings to identify content-relevant prior trials and systematic reviews (a “should-cite” set) and a matrix factorization model of the trial–paper citation network to estimate citation probabilities over candidate prior papers for the focal trial (a “would-cite” distribution). CBI is the symmetric Kullback–Leibler divergence between these distributions. Citation bias is lowest for trials that later report highly significant results ($p ≤ 0.01$) and spikes sharply for borderline findings just below $p = 0.05$, creating a pronounced $p$-value heap. In regressions with registration-year and condition fixed effects, higher CBI predicts a significantly greater probability that the trial's outcome falls in the narrow borderline band ($0.045 < p ≤ 0.05$).},
     selected={true},
     preview={would_cite_should_cite.png}
 }
@@ -13,7 +13,7 @@
     journal = {Working Project, World Bank},
     abstract = {We construct an annual, country-level AI innovation index organized around three pillars: Production of AI, Consumption of AI, and Participation in AI. Using indicators built from publications, patents, grants, collaboration networks, and demographic diversity, we score and rank countries on their capacity for frontier AI innovation.},
     selected = {true},
-    preview  = {ES_2024.png}
+    preview  = {ES_2024_v2.png}
 }
 
 @article{bao2025languagemodelssurfaceunwritten,
